--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,26 +9,8 @@
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 <div class="container p-25 pt-5">
-<form method="post">
-    {{ form.csrf_token() }}
-    <div class="mb-3">
-    <label for="usernames" class="form-label">Username(s):</label>
-    {{ form.usernames(type="text", class="form-control", id="usernames") }}
-    </div>
-    <div class="mb-3">
-    <label for="name" class="form-label">Full Name:</label>
-    {{ form.name(type="text", class="form-control", id="name") }}
-    </div>
-    <div class="mb-3">
-    <label for="organisations" class="form-label">Organisation(s):</label>
-    {{ form.organisations(type="text", class="form-control", id="organisations") }}
-    </div>
-    <div class="mb-3">
-    <label for="domains" class="form-label">Domains You Own:</label>
-    {{ form.domains(type="text", class="form-control", id="domains") }}
-    </div>
-    {{ form.submit(type="submit", class="btn btn-primary") }}
-</form>
+{% block content %}
+{% endblock %}
 </div>
 </body>
 </html>
