--- a/src/templates/data.html
+++ b/src/templates/data.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-    <ul class="list-group">
+    <h1 class="text-center">Accounts Found</h1>
+    <ul class="list-group w-50 mx-auto">
         {% for site in account_sites %}
             <!-- Button trigger modal -->
-            <li class="list-group-item">
+            <li class="list-group-item d-grid gap-2">
                 {% if site.pwned == True %}
                 <button type="button" class="btn btn-danger" data-bs-toggle="modal"
                         data-bs-target="#{{ site.url.translate(str.maketrans('', '', string.punctuation)) }}">
@@ -12,7 +13,7 @@
                         data-bs-target="#{{ site.url.translate(str.maketrans('', '', string.punctuation)) }}">
                 {% endif %}
                     <img src="http://www.google.com/s2/favicons?domain={{ site.extracted_domain.domain + "." + site.extracted_domain.suffix }}" alt="favicon">
-                    {{ site.extracted_domain.domain.title() }}
+                    {{ site.extracted_domain.domain.title() }} – {{ site.username }}
                 </button>
             </li>
             <!-- Modal -->
@@ -21,15 +22,58 @@
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">{{ site.extracted_domain.domain.title() }}</h5>
+                            <h5 class="modal-title" id="exampleModalLabel">{{ site.extracted_domain.domain.title() }} – {{ site.username }}</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <a href="{{ site.url }}">{{ site.url }}</a><br>
+                            <h6><a href="{{ site.url }}">Site Link</a></h6><br>
                             {% if site.pwned %}
                                 <b>WARNING: Site involved in data breach on {{ site.breach_date }}</b>
                                 <p>{{ site.pwn_description | safe}}</p>
+                            {% else %}
+                                <b>No breaches found on <a href="https://haveibeenpwned.com">haveibeenpwned.com</a></b>
                             {% endif %}
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </ul>
+    <br>
+    <h1 class="text-center">Elsewhere on the Internet</h1>
+        <ul class="list-group w-50 mx-auto">
+        {% for domain, sites in grouped_list.items() %}
+            <!-- Button trigger modal -->
+            <li class="list-group-item d-grid gap-2">
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#{{ sites[0].url.translate(str.maketrans('', '', string.punctuation)) }}">
+                    <img src="http://www.google.com/s2/favicons?domain={{ sites[0].extracted_domain.domain + "." + sites[0].extracted_domain.suffix }}" alt="favicon">
+                    {{ sites[0].extracted_domain.domain.title() }}
+                </button>
+            </li>
+            <!-- Modal -->
+            <div class="modal fade" id="{{ (sites[0].url.translate(str.maketrans('', '', string.punctuation))) }}"
+                 tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">{{ sites[0].extracted_domain.domain.title() }}</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            {% for link in sites %}
+                                {% if link.extracted_domain.subdomain != "" %}
+                                <h6><a href="{{ link.url }}">{{ link.url.split("://")[1].replace(link.extracted_domain.subdomain + "." + link.extracted_domain.registered_domain, "") }}</a></h6><br>
+                                {% else %}
+                                <h6><a href="{{ link.url }}">{{ link.url.split("://")[1].replace(link.extracted_domain.registered_domain, "") }}</a></h6><br>
+                                {% endif %}
+                                <p>{{ link.snippet | safe }}</p>
+                                <hr>
+                            {% endfor %}
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
