--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <h1 class="display-1 text-center" style="font-weight: 600">Paper Trail</h1>
     <form method="post">
         {{ form.csrf_token() }}
         <div class="mb-3">
